--- a/Installer_Src/Setup DreamWorld/My Project/Resources.nl-NL.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.nl-NL.resx
@@ -3051,4 +3051,19 @@
   <data name="Birthday_word" xml:space="preserve">
     <value>Verjaardag</value>
   </data>
+  <data name="PleaseWait" xml:space="preserve">
+    <value>Wacht tot Robust volledig is opgestart. Dit kan enkele minuten duren.</value>
+  </data>
+  <data name="Owner_Name" xml:space="preserve">
+    <value>Naam eigenaar</value>
+  </data>
+  <data name="DNSAltWords" xml:space="preserve">
+    <value>Alternatieve naam voor gebruik door Apache of Jopensim</value>
+  </data>
+  <data name="Apply" xml:space="preserve">
+    <value>Van toepassing zijn</value>
+  </data>
+  <data name="None1" xml:space="preserve">
+    <value>Geen</value>
+  </data>
 </root>
