--- a/Installer_Src/Setup DreamWorld/My Project/Resources.sv.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.sv.resx
@@ -3051,4 +3051,19 @@
   <data name="Birthday_word" xml:space="preserve">
     <value>Födelsedag</value>
   </data>
+  <data name="PleaseWait" xml:space="preserve">
+    <value>Vänta tills Robust startar helt. Det kan ta några minuter.</value>
+  </data>
+  <data name="Owner_Name" xml:space="preserve">
+    <value>Ägarnamn</value>
+  </data>
+  <data name="DNSAltWords" xml:space="preserve">
+    <value>Alternativt namn för användning av Apache eller Jopensim</value>
+  </data>
+  <data name="Apply" xml:space="preserve">
+    <value>Tillämpa</value>
+  </data>
+  <data name="None1" xml:space="preserve">
+    <value>Ingen</value>
+  </data>
 </root>
