--- a/Installer_Src/Setup DreamWorld/My Project/Resources.zh-cn.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.zh-cn.resx
@@ -3051,4 +3051,19 @@
   <data name="Birthday_word" xml:space="preserve">
     <value>生日</value>
   </data>
+  <data name="PleaseWait" xml:space="preserve">
+    <value>请等待Robust完全启动。这可能需要几分钟。</value>
+  </data>
+  <data name="Owner_Name" xml:space="preserve">
+    <value>所有者名称</value>
+  </data>
+  <data name="DNSAltWords" xml:space="preserve">
+    <value>供Apache或Jopensim使用的备用名称</value>
+  </data>
+  <data name="Apply" xml:space="preserve">
+    <value>申请</value>
+  </data>
+  <data name="None1" xml:space="preserve">
+    <value>没有</value>
+  </data>
 </root>
