--- a/Installer_Src/Setup DreamWorld/My Project/Resources.en.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.en.resx
@@ -3018,4 +3018,52 @@
   <data name="ExportAllMaps" xml:space="preserve">
     <value>Export All Maps</value>
   </data>
+  <data name="LandMaker" xml:space="preserve">
+    <value>Land Maker</value>
+  </data>
+  <data name="Landscaping" xml:space="preserve">
+    <value>Landscaping</value>
+  </data>
+  <data name="DeletebyAge" xml:space="preserve">
+    <value>Delete by Age</value>
+  </data>
+  <data name="KeepAlways" xml:space="preserve">
+    <value>Keep Always</value>
+  </data>
+  <data name="AnalyzeLogButton" xml:space="preserve">
+    <value>Analyze Log</value>
+  </data>
+  <data name="TreesAndPlants" xml:space="preserve">
+    <value>Trees and Plants</value>
+  </data>
+  <data name="Quantity_word" xml:space="preserve">
+    <value>Quantity</value>
+  </data>
+  <data name="Radius_Word" xml:space="preserve">
+    <value>Radius</value>
+  </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>Level</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>Age</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>Birthday</value>
+  </data>
+  <data name="PleaseWait" xml:space="preserve">
+    <value>Please wait for Robust to completely boot. This may take some minutes.</value>
+  </data>
+  <data name="Owner_Name" xml:space="preserve">
+    <value>Owner Name</value>
+  </data>
+  <data name="DNSAltWords" xml:space="preserve">
+    <value>Alternate name for use by Apache or Jopensim</value>
+  </data>
+  <data name="Apply" xml:space="preserve">
+    <value>Apply</value>
+  </data>
+  <data name="None1" xml:space="preserve">
+    <value>None</value>
+  </data>
 </root>
