--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fr.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fr.resx
@@ -3051,4 +3051,19 @@
   <data name="Birthday_word" xml:space="preserve">
     <value>Anniversaire</value>
   </data>
+  <data name="PleaseWait" xml:space="preserve">
+    <value>Veuillez attendre que Robust démarre complètement. Cela peut prendre quelques minutes.</value>
+  </data>
+  <data name="Owner_Name" xml:space="preserve">
+    <value>Le nom du propriétaire</value>
+  </data>
+  <data name="DNSAltWords" xml:space="preserve">
+    <value>Autre nom à utiliser par Apache ou Jopensim</value>
+  </data>
+  <data name="Apply" xml:space="preserve">
+    <value>Appliquer</value>
+  </data>
+  <data name="None1" xml:space="preserve">
+    <value>Aucun</value>
+  </data>
 </root>
