--- a/Installer_Src/Setup DreamWorld/My Project/Resources.it.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.it.resx
@@ -3051,4 +3051,19 @@
   <data name="Birthday_word" xml:space="preserve">
     <value>Compleanno</value>
   </data>
+  <data name="PleaseWait" xml:space="preserve">
+    <value>Attendi che Robust si avvii completamente. L'operazione potrebbe richiedere alcuni minuti.</value>
+  </data>
+  <data name="Owner_Name" xml:space="preserve">
+    <value>Nome del proprietario</value>
+  </data>
+  <data name="DNSAltWords" xml:space="preserve">
+    <value>Nome alternativo per l'utilizzo da parte di Apache o Jopensim</value>
+  </data>
+  <data name="Apply" xml:space="preserve">
+    <value>Applicare</value>
+  </data>
+  <data name="None1" xml:space="preserve">
+    <value>Nessuna</value>
+  </data>
 </root>
