--- a/Installer_Src/Setup DreamWorld/My Project/Resources.no.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.no.resx
@@ -3051,4 +3051,19 @@
   <data name="Birthday_word" xml:space="preserve">
     <value>Fødselsdag</value>
   </data>
+  <data name="PleaseWait" xml:space="preserve">
+    <value>Vent til Robust starter helt opp. Dette kan ta noen minutter.</value>
+  </data>
+  <data name="Owner_Name" xml:space="preserve">
+    <value>Eiers navn</value>
+  </data>
+  <data name="DNSAltWords" xml:space="preserve">
+    <value>Alternativt navn for bruk av Apache eller Jopensim</value>
+  </data>
+  <data name="Apply" xml:space="preserve">
+    <value>Søke om</value>
+  </data>
+  <data name="None1" xml:space="preserve">
+    <value>Ingen</value>
+  </data>
 </root>
