--- a/Installer_Src/Setup DreamWorld/My Project/Resources.vi.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.vi.resx
@@ -3051,4 +3051,19 @@
   <data name="Birthday_word" xml:space="preserve">
     <value>Sinh nhật</value>
   </data>
+  <data name="PleaseWait" xml:space="preserve">
+    <value>Vui lòng đợi Robust khởi động hoàn toàn. Quá trình này có thể mất vài phút.</value>
+  </data>
+  <data name="Owner_Name" xml:space="preserve">
+    <value>Tên chủ sở hữu</value>
+  </data>
+  <data name="DNSAltWords" xml:space="preserve">
+    <value>Tên thay thế để Apache hoặc Jopensim sử dụng</value>
+  </data>
+  <data name="Apply" xml:space="preserve">
+    <value>Ứng dụng</value>
+  </data>
+  <data name="None1" xml:space="preserve">
+    <value>không ai</value>
+  </data>
 </root>
